--- a/public/css/application.css
+++ b/public/css/application.css
@@ -9,6 +9,7 @@ body {
 .welcome h1 {
     font-size: 50px;
     float: left;
+    width: 100%;
 }
 
 .welcome p {
@@ -17,7 +18,7 @@ body {
 
 .welcome a {
     clear: both;
-    float: left;
+    margin: 15px;
 }
 
 .register {
