--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <div class="welcome">
   <% if session[:email].nil? %>
     <h1> You are not logged in </h1>
-    <a href="/register">Register</a>
+    <a href="/login">Log In</a><a href="/register">Register</a>
   <% else %>
-    <h1>Welcome, <%= session[:email] %></h1>
-    <a href="/logout">Logout</a>
+    <h1>Welcome, <%= email %></h1>
+    <a href="/logout">Log Out</a>
   <% end %>
 </div>
