--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,15 +1,135 @@
 body {
-    background-color: lightsalmon;
+    background-color: white;
+}
+
+#header_container,
+#nav_container,
+#content_container,
+#footer_container {
+    margin: auto;
+    width: 960px;
+}
+
+header {
+    background-color: #382533;
+}
+
+nav {
+    background-color: #1C1E26;
+    overflow: hidden;
+}
+
+#content {
+    background-color: #A89868;
+}
+
+
+footer {
+    background-color: #BD6C1A;
+    color: ivory;
+}
+
+
+
+/* ----- =columns ----- */
+
+.one_half {
+    width:460px;
+    margin-top: auto;
+    align-content: center;
+}
+
+.one_third {
+    width:300px;
+    text-align: center;
+}
+
+.two_third {
+    width:620px;
+}
+
+.one_fourth {
+    width:220px;
+}
+
+.three_fourth {
+    width:700px;
+}
+
+.full_column {
+    width:940px;
+}
+
+.one_half, .one_third, .two_third, .three_fourth, .one_fourth, .full_column {
+    position:relative;
+    margin-left:10px;
+    margin-right:10px;
+    margin-bottom:20px;
+    float: left;
+}
+
+.resetColumnSet {
+    clear:both;
+}
+
+.line-separator {
+    height:3px;
+    background:#BD6C1A;
+}
+
+.message {
+    font-size: 30px;
+    height: 200px;
+    display: flex;
+    justify-content:center;
+    align-content:center;
+    flex-direction:column;
+}
+
+#text {
+    font-size: 15px;
+}
+
+/* ----- =menu (Primary Nav) ----- */
+
+
+#menu {
+    float: right; /* or float: left */
+    margin: 0 10px 0 0;
+}
+
+#menu li {
+    float: left;
+    list-style: none;
+}
+
+#menu li a {
+    font-size: 120%;
+    color: #fff;
+    padding: 17px 25px 15px 25px;
+    display: block;
+    text-decoration: none;
+}
+
+#menu li a:hover {
+    color: #BD6C1A;
+}
+
+/*Borders between each button */
+#menu li+li {
+    border-left: 2px solid #000;
+}
+
+/*Borders on both sides */
+#menu li:first-child a {
+    border-left: 2px solid #000;
+}
+#menu li:last-child a {
+    border-right: 2px solid #000;
 }
 
 .welcome {
     margin-left: 25px;
-}
-
-.welcome h1 {
-    font-size: 50px;
-    float: left;
-    width: 100%;
 }
 
 .welcome p {
